<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadActivity">


    <View
        android:id="@+id/container_topo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/container_topo"
        app:layout_constraintEnd_toEndOf="@id/container_topo"
        app:layout_constraintStart_toStartOf="@id/container_topo"
        app:layout_constraintTop_toTopOf="@id/container_topo" />

    <ImageView
        android:id="@+id/cadeado"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/cadeado"
        app:layout_constraintBottom_toBottomOf="@id/container_topo"
        app:layout_constraintEnd_toEndOf="@id/container_topo"
        app:layout_constraintTop_toBottomOf="@id/container_topo"
        app:layout_constraintStart_toStartOf="@id/container_topo" />


    <TextView
        android:id="@+id/txtResetSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/texto_reset"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadeado" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtResetSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edit_text"
            android:hint="@string/cad_email"
            android:maxLines="1"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_entrar_background"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/reset"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadEmailLayout"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_entrar_background"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/voltar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btReset" />

</androidx.constraintlayout.widget.ConstraintLayout>