<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadActivity">


    <View
        android:id="@+id/container_topo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/container_topo"
        app:layout_constraintEnd_toEndOf="@id/container_topo"
        app:layout_constraintStart_toStartOf="@id/container_topo"
        app:layout_constraintTop_toTopOf="@id/container_topo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_topo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edit_text"
            android:hint="@string/cad_email"
            android:maxLines="1"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadSenhaLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        android:layout_marginTop="20dp"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edit_text"
            android:hint="@string/cad_senha"
            android:maxLines="1"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cadConfSenhaLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        android:layout_marginTop="20dp"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadSenhaLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edit_text"
            android:hint="@string/cad_conf_senha"
            android:maxLines="1"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_entrar_background"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/avancar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadConfSenhaLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>