<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_topo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/container_topo"
        app:layout_constraintEnd_toEndOf="@id/container_topo"
        app:layout_constraintStart_toStartOf="@id/container_topo"
        app:layout_constraintTop_toTopOf="@id/container_topo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCarrossel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_topo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCarrossel"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardGaleria"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/galeria"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/fauna"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_camera"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            app:cardBackgroundColor="@color/transparente"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/camera"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_config"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            app:cardBackgroundColor="@color/transparente"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/config"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracao"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>